সদস্য মডিউলে Designation এবং Opening Balance ফিচার যুক্ত করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                             <tr>
                                 <th>ক্রমিক</th>
                                 <th>নাম</th>
+                                <th>পদবি</th>
                                 <th>ফোন</th>
                                 <th>যোগদান</th>
                                 <th>মোট জমা</th>
