Dashboard এর Quick Action Links ঠিক করা (Fix Quick Action Links)

--- a/index.html
+++ b/index.html
@@ -147,21 +147,21 @@
                         <h3>দ্রুত অ্যাকশন</h3>
                         <div class="quick-actions">
                             <button class="action-tile"
-                                onclick="Navigation.showPage('deposits'); document.getElementById('addDepositBtn').click()">
+                                onclick="App.loadPage('deposits'); document.getElementById('addDepositBtn').click()">
                                 <span class="tile-icon">💰</span>
                                 <span class="tile-text">নতুন জমা</span>
                             </button>
                             <button class="action-tile"
-                                onclick="Navigation.showPage('members'); document.getElementById('addMemberBtn').click()">
+                                onclick="App.loadPage('members'); document.getElementById('addMemberBtn').click()">
                                 <span class="tile-icon">👤</span>
                                 <span class="tile-text">নতুন সদস্য</span>
                             </button>
                             <button class="action-tile"
-                                onclick="Navigation.showPage('investments'); document.getElementById('addInvestmentBtn').click()">
+                                onclick="App.loadPage('investments'); document.getElementById('addInvestmentBtn').click()">
                                 <span class="tile-icon">📈</span>
                                 <span class="tile-text">নতুন বিনিয়োগ</span>
                             </button>
-                            <button class="action-tile" onclick="Navigation.showPage('reports')">
+                            <button class="action-tile" onclick="App.loadPage('reports')">
                                 <span class="tile-icon">📊</span>
                                 <span class="tile-text">রিপোর্ট</span>
                             </button>
