সুপার অ্যাডমিন এর ইউজারনেম পরিবর্তন (Change Superadmin Username)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form id="loginForm">
                 <div class="form-group">
                     <label>ইউজারনেম</label>
-                    <input type="text" id="loginUsername" required placeholder="admin">
+                    <input type="text" id="loginUsername" required placeholder="superadmin">
                 </div>
                 <div class="form-group">
                     <label>পাসওয়ার্ড</label>
@@ -34,7 +34,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">লগইন করুন</button>
             </form>
-            <p class="login-footer">ডিফল্ট: admin / admin123</p>
+            <p class="login-footer">ডিফল্ট: superadmin / admin123</p>
         </div>
     </section>
 
