সাইডবার হাইড/শো (Collapse) করার ফিচার যোগ করা হয়েছে (Added Sidebar Toggle feature)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <span class="logo-icon">🌟</span>
                     <h1>স্বপ্ন</h1>
                 </div>
+                <button class="sidebar-toggle-btn" id="sidebarToggle" title="মেনু ছোট/বড় করুন">❮</button>
                 <p class="tagline">সমিতি ম্যানেজমেন্ট</p>
             </div>
 
