মোবাইল রেসপন্সিভনেস এবং বার্গার মেনু ইমপ্লিমেন্ট করা হয়েছে (Implemented mobile responsiveness and burger menu)

--- a/index.html
+++ b/index.html
@@ -444,6 +444,8 @@
                 </div>
             </section>
         </main>
+        <!-- Sidebar Overlay -->
+        <div class="sidebar-overlay" id="sidebarOverlay"></div>
     </div> <!-- End Main App Wrapper -->
 
     <!-- Modal for Forms -->
