--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
     <script src="js/donations.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/reports.js"></script>
+    <script src="js/migration.js"></script>
     <script src="js/sample-data.js"></script>
     <script src="js/app.js"></script>
 </body>
