Dashboard এ বকেয়া লোনের সেকশন যোগ করা হয়েছে (Add pending loans section to dashboard)

--- a/index.html
+++ b/index.html
@@ -213,6 +213,27 @@
 
                     <!-- Right Column -->
                     <div class="dashboard-col">
+                        <!-- বকেয়া লোন -->
+                        <div class="card">
+                            <h3>বকেয়া লোন</h3>
+                            <div class="table-responsive" style="max-height: 200px; overflow-y: auto;">
+                                <table class="data-table" id="pendingLoansTable">
+                                    <thead>
+                                        <tr>
+                                            <th>সদস্য</th>
+                                            <th>বকেয়া</th>
+                                            <th>অ্যাকশন</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="pendingLoansList">
+                                        <tr class="empty-row">
+                                            <td colspan="3">কোনো বকেয়া লোন নেই</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
                         <div class="card recent-activities">
                             <h3>সাম্প্রতিক কার্যক্রম</h3>
                             <ul id="recentActivities">
