Dashboard এ সাম্প্রতিক খরচের সেকশন যোগ করা হয়েছে (Added Recent Expenses section)

--- a/index.html
+++ b/index.html
@@ -219,6 +219,14 @@
                                 <li class="empty-state">কোনো কার্যক্রম নেই</li>
                             </ul>
                         </div>
+
+                        <!-- সাম্প্রতিক খরচ -->
+                        <div class="card recent-expenses" style="margin-top: 20px;">
+                            <h3>সাম্প্রতিক খরচ</h3>
+                            <ul id="recentExpenses">
+                                <li class="empty-state">কোনো খরচ নেই</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
