Dashboard Calculation Fix & UI Update: ড্যাশবোর্ড ক্যালকুলেশন ফিক্স, parseFloat বাশানো এবং কার্ড/টেবিল UI আপডেট

--- a/index.html
+++ b/index.html
@@ -141,25 +141,18 @@
                             <p>মোট সঞ্চয়</p>
                         </div>
                     </div>
+                    <div class="stat-card danger">
+                        <div class="stat-icon">💸</div>
+                        <div class="stat-info">
+                            <h3 id="totalOutstandingLoan">৳০</h3>
+                            <p>মোট বকেয়া লোন</p>
+                        </div>
+                    </div>
                     <div class="stat-card warning">
                         <div class="stat-icon">📈</div>
                         <div class="stat-info">
-                            <h3 id="totalInvestments">৳০</h3>
-                            <p>মোট বিনিয়োগ</p>
-                        </div>
-                    </div>
-                    <div class="stat-card info">
-                        <div class="stat-icon">💹</div>
-                        <div class="stat-info">
-                            <h3 id="totalProfit">৳০</h3>
-                            <p>মোট লাভ</p>
-                        </div>
-                    </div>
-                    <div class="stat-card danger">
-                        <div class="stat-icon">🤝</div>
-                        <div class="stat-info">
-                            <h3 id="totalDonations">৳০</h3>
-                            <p>মোট সহায়তা</p>
+                            <h3 id="currentTotalInvestments">৳০</h3>
+                            <p>বর্তমান মোট বিনিয়োগ</p>
                         </div>
                     </div>
                 </div>
@@ -177,7 +170,7 @@
                                         <tr>
                                             <th>সদস্য</th>
                                             <th>পরিমাণ</th>
-                                            <th>স্ট্যাটাস</th>
+                                            <th class="text-center">স্ট্যাটাস</th>
                                         </tr>
                                     </thead>
                                     <tbody id="monthlyDepositsList">
@@ -198,7 +191,7 @@
                                         <tr>
                                             <th>সদস্য</th>
                                             <th>বকেয়া</th>
-                                            <th>অ্যাকশন</th>
+                                            <th class="text-center">অ্যাকশন</th>
                                         </tr>
                                     </thead>
                                     <tbody id="pendingLoansList">
