ড্যাশবোর্ড ইউআই আপডেট: বিনিয়োগ, মাসিক হিসাব, লোন এবং খরচ সেকশন ফিক্স (Dashboard UI Updates)

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="stat-icon">📈</div>
                         <div class="stat-info">
                             <h3 id="currentTotalInvestments">৳০</h3>
-                            <p>বর্তমান মোট বিনিয়োগ</p>
+                            <p>চলমান মোট বিনিয়োগ</p>
                         </div>
                     </div>
                 </div>
@@ -191,12 +191,12 @@
                                         <tr>
                                             <th>সদস্য</th>
                                             <th>বকেয়া</th>
-                                            <th class="text-center">অ্যাকশন</th>
+
                                         </tr>
                                     </thead>
                                     <tbody id="pendingLoansList">
                                         <tr class="empty-row">
-                                            <td colspan="3">কোনো বকেয়া লোন নেই</td>
+                                            <td colspan="2">কোনো বকেয়া লোন নেই</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -214,7 +214,7 @@
                         </div>
 
                         <!-- সাম্প্রতিক খরচ -->
-                        <div class="card recent-expenses" style="margin-top: 20px;">
+                        <div class="card recent-expenses" style="margin-top: 10px;">
                             <h3>সাম্প্রতিক খরচ</h3>
                             <ul id="recentExpenses">
                                 <li class="empty-state">কোনো খরচ নেই</li>
