চলতি মাসের জমা টাইটেলটি ডায়নামিক করা হয়েছে এবং চলতি মাসের নাম যুক্ত করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                             </div>
                         </div>
 
-                        <!-- চলতি মাসের হিসাব -->
+                        <!-- চলতি মাসের জমা -->
                         <div class="card">
-                            <h3>চলতি মাসের হিসাব</h3>
+                            <h3 id="monthlyDepositsTitle">চলতি মাসের জমা</h3>
                             <div class="table-responsive">
                                 <table class="data-table" id="monthlyDepositsTable">
                                     <thead>
