ড্যাশবোর্ডে 'সর্বমোট ব্যয়' এর জন্য একটি নতুন কার্ড যোগ করা হয়েছে এবং খরচ ও দানের যোগফল প্রদর্শন করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
                             <p>চলমান মোট বিনিয়োগ</p>
                         </div>
                     </div>
+                    <div class="stat-card info">
+                        <div class="stat-icon">💵</div>
+                        <div class="stat-info">
+                            <h3 id="totalExpenditure">৳০</h3>
+                            <p>সর্বমোট ব্যয়</p>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Dashboard Main Grid -->
