--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </div>
 
     <!-- JavaScript Files -->
-    <script src="js/storage.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/users.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/members.js"></script>
