UI Updates: মেনু এবং পেজ হেডারগুলোর নাম বাংলায় পরিবর্তন করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -66,31 +66,31 @@
                 </li>
                 <li class="nav-item" data-page="members">
                     <span class="nav-icon">👥</span>
-                    <span class="nav-text">সদস্য</span>
+                    <span class="nav-text">সদস্য ব্যবস্থাপনা</span>
                 </li>
                 <li class="nav-item" data-page="deposits">
                     <span class="nav-icon">💰</span>
-                    <span class="nav-text">জমা</span>
+                    <span class="nav-text">আমানত ও সঞ্চয়</span>
                 </li>
                 <li class="nav-item" data-page="investments">
                     <span class="nav-icon">📈</span>
-                    <span class="nav-text">বিনিয়োগ</span>
+                    <span class="nav-text">বিনিয়োগ ব্যবস্থাপনা</span>
                 </li>
                 <li class="nav-item" data-page="donations">
                     <span class="nav-icon">🤝</span>
-                    <span class="nav-text">সহায়তা</span>
+                    <span class="nav-text">সেবা ও সহায়তা</span>
                 </li>
                 <li class="nav-item" data-page="loans">
-                    <span class="nav-icon">💸</span>
-                    <span class="nav-text">লোন</span>
+                    <span class="nav-icon">🏦</span>
+                    <span class="nav-text">ঋণ ব্যবস্থাপনা</span>
                 </li>
                 <li class="nav-item" data-page="expenses">
                     <span class="nav-icon">💵</span>
-                    <span class="nav-text">খরচ</span>
+                    <span class="nav-text">ব্যয় ব্যবস্থাপনা</span>
                 </li>
                 <li class="nav-item" data-page="income">
                     <span class="nav-icon">💰</span>
-                    <span class="nav-text">আয়</span>
+                    <span class="nav-text">আয় ও রাজস্ব</span>
                 </li>
                 <li class="nav-item" data-page="reports">
                     <span class="nav-icon">📋</span>
@@ -98,7 +98,7 @@
                 </li>
                 <li class="nav-item" data-page="users" style="display: none;">
                     <span class="nav-icon">🔐</span>
-                    <span class="nav-text">অ্যাডমিন</span>
+                    <span class="nav-text">অ্যাডমিন প্যানেল</span>
                 </li>
             </ul>
 
@@ -270,7 +270,7 @@
             <!-- Deposits Page -->
             <section class="page" id="page-deposits">
                 <div class="page-header">
-                    <h2>জমা ব্যবস্থাপনা</h2>
+                    <h2>আমানত ও সঞ্চয়</h2>
                     <button class="btn btn-primary" id="addDepositBtn">
                         <span>+</span> নতুন জমা
                     </button>
@@ -314,7 +314,7 @@
             <!-- Investments Page -->
             <section class="page" id="page-investments">
                 <div class="page-header">
-                    <h2>বিনিয়োগ ব্যবস্থাপনা</h2>
+                    <h2>বিনিয়োগ ব্যবস্থাপনা</h2>
                     <button class="btn btn-primary" id="addInvestmentBtn">
                         <span>+</span> নতুন বিনিয়োগ
                     </button>
@@ -362,7 +362,7 @@
             <!-- Donations Page -->
             <section class="page" id="page-donations">
                 <div class="page-header">
-                    <h2>সহায়তা কার্যক্রম</h2>
+                    <h2>সেবা ও সহায়তা</h2>
                     <button class="btn btn-primary" id="addDonationBtn">
                         <span>+</span> নতুন সহায়তা
                     </button>
@@ -394,7 +394,7 @@
             <!-- Loans Page -->
             <section class="page" id="page-loans">
                 <div class="page-header">
-                    <h2>লোন ব্যবস্থাপনা</h2>
+                    <h2>ঋণ ব্যবস্থাপনা</h2>
                     <button class="btn btn-primary" id="addLoanBtn">
                         <span>+</span> নতুন লোন
                     </button>
@@ -443,7 +443,7 @@
             <!-- Expenses Page -->
             <section class="page" id="page-expenses">
                 <div class="page-header">
-                    <h2>খরচ ব্যবস্থাপনা</h2>
+                    <h2>ব্যয় ব্যবস্থাপনা</h2>
                     <button class="btn btn-primary" id="addExpenseBtn">
                         <span>+</span> নতুন খরচ
                     </button>
@@ -494,7 +494,7 @@
             <!-- Income Page -->
             <section class="page" id="page-income">
                 <div class="page-header">
-                    <h2>আয় ব্যবস্থাপনা</h2>
+                    <h2>আয় ও রাজস্ব</h2>
                     <button class="btn btn-primary" id="addIncomeBtn">
                         <span>+</span> নতুন আয়
                     </button>
@@ -577,7 +577,7 @@
             <!-- Users Page (Admin Only) -->
             <section class="page" id="page-users">
                 <div class="page-header">
-                    <h2>ব্যবহারকারী ব্যবস্থাপনা</h2>
+                    <h2>অ্যাডমিন প্যানেল</h2>
                     <button class="btn btn-primary" id="addUserBtn">
                         <span>+</span> নতুন ব্যবহারকারী
                     </button>
