--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <form id="loginForm">
                 <div class="form-group">
                     <label>ইউজারনেম</label>
-                    <input type="text" id="loginUsername" required placeholder="superadmin">
+                    <input type="text" id="loginUsername" required placeholder="আপনার ইউজারনেম">
                 </div>
                 <div class="form-group">
                     <label>পাসওয়ার্ড</label>
-                    <input type="password" id="loginPassword" required placeholder="admin123">
+                    <input type="password" id="loginPassword" required placeholder="আপনার পাসওয়ার্ড">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">লগইন করুন</button>
             </form>
-            <p class="login-footer">ডিফল্ট: superadmin / admin123</p>
+
         </div>
     </section>
 
